--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <div>
-        <img src="img/giovanni.png" alt="foto giovanni">
+        <img src="img/processed-72A115A4-15E9-4CE2-8C1C-7B1A9A2BB958 (1).jpeg" alt="foto giovanni">
     </div>
     <style>
      body {
@@ -117,10 +117,10 @@
     
     <h5 class="titulo3"><b>contatos</b></h5>
     <a href="https://github.com/giovannig10">  
-    <img src="img/gitizin.png" alt="link github" class="foto">
+    <img src="img/github.png" alt="link github" class="foto">
 </a> 
 <a href="https://www.instagram.com/giovanni_.goncalves?igsh=OGJoamxvbTZuMjB0&utm_source=qr">
-    <img src="img/logoinsta.jpg" alt="link do instagram" class="insta">
+    <img src="img/instagram.png" alt="link do instagram" class="insta">
 </a>
 </body>
 </html>
